Fixed bug for compiling tex file

--- a/docs/VnVPlan/VnVPlan.tex
+++ b/docs/VnVPlan/VnVPlan.tex
@@ -674,6 +674,8 @@ Test Case Derivation: N/A
 
 How test will be performed: Battery component will be isolated from device and fully charged and discharged 5 times.
 
+\end{enumerate}
+
 \subsubsection{Device should be accurate}
 The following set of tests will ensure that the device can recognize its state and perform its main functionality in accurate manner.
 
